--- a/index.html
+++ b/index.html
@@ -161,14 +161,10 @@
                   Don't miss out on the race to financial freedom – Get in the
                   fast lane with Bitcoin Race Token today!"
                 </p>
+                <!-- <a href="chartlink" class="button-play video-popup"> Chart </a> -->
+
                 <a
-                  href="https://www.youtube.com/watch?v=0O2aH4XLbto"
-                  class="button-play video-popup"
-                  ><i class="fa fa-play"></i>
-                  <ion-icon name="play"></ion-icon>
-                </a>
-                <a
-                  href="javascript:void(0)"
+                  href="whitepaperlink"
                   class="button bt-white iq-mt-5 iq-ml-10"
                   >White Paper</a
                 >
@@ -265,39 +261,103 @@
                 data-margin="30"
               >
                 <div class="item">
-                  <a href="clients.html"
+                  <a href="#"
                     ><img
-                      class="img-fluid center-block"
-                      src="images/clients/white/01.png"
+                      class="img-fluid center-block part_img"
+                      src="images/partners/poocoin.png"
                       alt="#"
                   /></a>
                 </div>
                 <div class="item">
-                  <a href="clients.html"
+                  <a href="#"
                     ><img
-                      class="img-fluid center-block"
-                      src="images/clients/white/02.png"
+                      class="img-fluid center-block part_img"
+                      src="images/partners/pancakeswap.png"
                       alt="#"
                   /></a>
                 </div>
                 <div class="item">
-                  <a href="clients.html"
+                  <a href="#"
                     ><img
-                      class="img-fluid center-block"
-                      src="images/clients/white/03.png"
+                      class="img-fluid center-block part_img"
+                      src="images/partners/bsc2.png"
                       alt="#"
                   /></a>
                 </div>
                 <div class="item">
-                  <a href="clients.html"
+                  <a href="#"
                     ><img
-                      class="img-fluid center-block"
-                      src="images/clients/white/04.png"
+                      class="img-fluid center-block part_img"
+                      src="images/partners/meta.png"
                       alt="#"
                   /></a>
                 </div>
                 <div class="item">
-                  <a href="clients.html"
+                  <a href="#"
+                    ><img
+                      class="img-fluid center-block part_img"
+                      src="images/partners/dextools.png"
+                      alt="#"
+                  /></a>
+                </div>
+                <div class="item">
+                  <a href="#"
+                    ><img
+                      class="img-fluid center-block part_img"
+                      src="images/partners/poocoin.png"
+                      alt="#"
+                  /></a>
+                </div>
+                <div class="item">
+                  <a href="#"
+                    ><img
+                      class="img-fluid center-block part_img"
+                      src="images/partners/bsc2.png"
+                      alt="#"
+                  /></a>
+                </div>
+                <div class="item">
+                  <a href="#"
+                    ><img
+                      class="img-fluid center-block part_img"
+                      src="images/partners/meta.png"
+                      alt="#"
+                  /></a>
+                </div>
+                <div class="item">
+                  <a href="#"
+                    ><img
+                      class="img-fluid center-block part_img"
+                      src="images/partners/dextools.png"
+                      alt="#"
+                  /></a>
+                </div>
+                <div class="item">
+                  <a href="#"
+                    ><img
+                      class="img-fluid center-block part_img"
+                      src="images/partners/bsc2.png"
+                      alt="#"
+                  /></a>
+                </div>
+                <div class="item">
+                  <a href="#"
+                    ><img
+                      class="img-fluid center-block part_img"
+                      src="images/partners/dextools.png"
+                      alt="#"
+                  /></a>
+                </div>
+                <div class="item">
+                  <a href="#"
+                    ><img
+                      class="img-fluid center-block part_img"
+                      src="images/partners/poocoin.png"
+                      alt="#"
+                  /></a>
+                </div>
+                <!-- <div class="item">
+                  <a href="#"
                     ><img
                       class="img-fluid center-block"
                       src="images/clients/white/05.png"
@@ -305,61 +365,13 @@
                   /></a>
                 </div>
                 <div class="item">
-                  <a href="clients.html"
+                  <a href="#"
                     ><img
                       class="img-fluid center-block"
                       src="images/clients/white/06.png"
                       alt="#"
                   /></a>
-                </div>
-                <div class="item">
-                  <a href="clients.html"
-                    ><img
-                      class="img-fluid center-block"
-                      src="images/clients/white/01.png"
-                      alt="#"
-                  /></a>
-                </div>
-                <div class="item">
-                  <a href="clients.html"
-                    ><img
-                      class="img-fluid center-block"
-                      src="images/clients/white/02.png"
-                      alt="#"
-                  /></a>
-                </div>
-                <div class="item">
-                  <a href="clients.html"
-                    ><img
-                      class="img-fluid center-block"
-                      src="images/clients/white/03.png"
-                      alt="#"
-                  /></a>
-                </div>
-                <div class="item">
-                  <a href="clients.html"
-                    ><img
-                      class="img-fluid center-block"
-                      src="images/clients/white/04.png"
-                      alt="#"
-                  /></a>
-                </div>
-                <div class="item">
-                  <a href="clients.html"
-                    ><img
-                      class="img-fluid center-block"
-                      src="images/clients/white/05.png"
-                      alt="#"
-                  /></a>
-                </div>
-                <div class="item">
-                  <a href="clients.html"
-                    ><img
-                      class="img-fluid center-block"
-                      src="images/clients/white/06.png"
-                      alt="#"
-                  /></a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -374,7 +386,7 @@
               class="col-lg-6 align-self-center wow fadeInLeft"
               data-wow-delay="0.3s"
             >
-              <img src="images/all-img/ban.png" class="img_ban" alt="" />
+              <img src="images/all-img/ban2.png" class="img_ban" alt="" />
             </div>
             <div
               class="col-lg-6 align-self-center mt-5 mt-lg-0 wow fadeInRight"
@@ -951,10 +963,16 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 align-self-center mt-5 mt-lg-0">
+            <div
+              class="col-lg-6 align-self-center mt-5 mt-lg-0 wow fadeInLeft"
+              data-wow-delay="0.3s"
+            >
               <img src="/images/all-img/tkn.png" alt="" class="tk_img" />
             </div>
-            <div class="col-lg-6 r9-mt-40">
+            <div
+              class="col-lg-6 r9-mt-40 wow fadeInRight"
+              data-wow-delay="0.7s"
+            >
               <div class="iq-accordion">
                 <div class="iq-ad-block ad-active">
                   <a href="javascript:void(0)" class="ad-title iq-tw-6"
@@ -1007,7 +1025,7 @@
     <section id="contact-us" class="contact-us overview-block-pt">
       <div class="wrapper">
         <div class="row justify-content-center">
-          <div class="col-lg-12 text-center">
+          <div class="col-lg-12 text-center wow fadeInUp" data-wow-delay="0.4s">
             <form id="contact" method="post">
               <div class="heading-title left">
                 <small class="iq-font-green">Contact With Us</small>
