all content updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Bitcoin Race</title>
+    <title>Groki1</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.ico" />
     <!-- Google Fonts -->
@@ -154,12 +154,13 @@
             >
               <div class="banner-text text-left text-white">
                 <h1 class="text-white iq-mb-20">
-                  Secure Your Spot in the Future of
-                  <b class="iq-font-yellow">Bitcoin Race</b>
+                  Catalyzing the Future of Technology with
+                  <b class="iq-font-yellow">Groki1</b>
                 </h1>
                 <p>
-                  Don't miss out on the race to financial freedom – Get in the
-                  fast lane with Bitcoin Race Token today!"
+                  Step into the realm of Groki1, where the boundless potential
+                  of artificial intelligence converges with the robust security
+                  of blockchain technology!"
                 </p>
                 <!-- <a href="chartlink" class="button-play video-popup"> Chart </a> -->
 
@@ -379,14 +380,19 @@
       </div>
       <!-- Clients -->
       <!-- What is Ico -->
-      <section id="ico" class="overview-block-pt">
+      <section id="ico" class="overview-block-pt about_bg">
         <div class="container">
           <div class="row flex-row-reverse">
             <div
               class="col-lg-6 align-self-center wow fadeInLeft"
               data-wow-delay="0.3s"
             >
-              <img src="images/all-img/ban2.png" class="img_ban" alt="" />
+              <img
+                src="images/all-img/tokn.jpg"
+                class="img_ban"
+                alt=""
+                style="border-radius: 8px"
+              />
             </div>
             <div
               class="col-lg-6 align-self-center mt-5 mt-lg-0 wow fadeInRight"
@@ -394,26 +400,24 @@
             >
               <div class="heading-title left">
                 <small class="iq-font-green">Who We Are</small>
-                <h2 class="iq-tw-6">About BitCoin Race</h2>
+                <h2 class="iq-tw-6">About Groki1</h2>
               </div>
               <p>
-                Bitcoin Race Token is a revolutionary utility token designed to
-                propel you into the exciting world of cryptocurrency. As the
-                blockchain space continues to evolve, our token opens doors to
-                numerous opportunities and benefits. With Bitcoin Race Token,
-                you not only secure your place in the future of finance but also
-                supercharge your portfolio with an asset that's built for
-                growth.
+                At Groki1, we are pioneering the integration of artificial
+                intelligence (AI) with blockchain technology to create a new
+                paradigm in digital solutions. Our mission is to harness the
+                power of AI to enhance the capabilities and security of
+                blockchain-based applications, paving the way for smarter, more
+                efficient, and secure digital transactions.
               </p>
               <p>
-                Our community provides exclusive access to cutting-edge crypto
-                services, allowing you to trade, earn, and experience the full
-                spectrum of possibilities in the crypto market. Rest easy
-                knowing that your investments are safeguarded and transparent
-                with Bitcoin Race Token, making it a promising addition to your
-                digital asset portfolio. Join us on this exhilarating journey
-                towards financial freedom and become a part of the Bitcoin Race
-                today.
+                Our platform, powered by the Groki1 Coin, is at the forefront of
+                this technological revolution. We employ advanced AI algorithms
+                to analyze market trends, optimize blockchain operations, and
+                provide predictive insights that empower users to make informed
+                decisions. Our AI-driven approach ensures not only enhanced
+                transaction efficiency but also a higher level of security and
+                trust in the blockchain ecosystem.
               </p>
               <a class="button iq-mt-20" href="buylink" role="button"
                 >Buy Now</a
@@ -444,10 +448,12 @@
                   <img class="img-fluid" src="images/fancy/1.png" alt="" />
                 </div>
                 <div class="fancy-content">
-                  <h5 class="iq-tw-7">Staking Rewards</h5>
+                  <h5 class="iq-tw-7">Advanced Data Analytics</h5>
                   <p>
-                    Holders can earn rewards by staking their Bitcoin Race
-                    Tokens, allowing for passive income and growth over time.
+                    Utilizing AI to perform deep data analysis, Groki1 could
+                    offer insightful predictions and decision-making support,
+                    crucial for industries like finance, healthcare, and
+                    logistics.
                   </p>
                 </div>
               </div>
@@ -458,11 +464,12 @@
                   <img class="img-fluid" src="images/fancy/2.png" alt="" />
                 </div>
                 <div class="fancy-content">
-                  <h5 class="iq-tw-7">Community-Driven:</h5>
+                  <h5 class="iq-tw-7">Enhanced Security</h5>
                   <p>
-                    Bitcoin Race Token has a strong and active community that
-                    actively participates in the token's governance and
-                    decision-making processes.
+                    By combining AI with blockchain, Groki1 could provide
+                    heightened security features, leveraging blockchain's
+                    tamper-proof nature and AI's ability to detect and respond
+                    to threats dynamically.
                   </p>
                 </div>
               </div>
@@ -473,11 +480,11 @@
                   <img class="img-fluid" src="images/fancy/3.png" alt="" />
                 </div>
                 <div class="fancy-content">
-                  <h5 class="iq-tw-7">Transparency</h5>
+                  <h5 class="iq-tw-7">Smart Contract Automation</h5>
                   <p>
-                    The blockchain technology behind Bitcoin Race Token ensures
-                    transparent and immutable transactions, fostering trust and
-                    security.
+                    AI could enhance the functionality of smart contracts on the
+                    blockchain, enabling more complex, conditional, and
+                    self-executing contracts that can learn and adapt over time.
                   </p>
                 </div>
               </div>
@@ -488,10 +495,11 @@
                   <img class="img-fluid" src="images/fancy/4.png" alt="" />
                 </div>
                 <div class="fancy-content">
-                  <h5 class="iq-tw-7">Security</h5>
+                  <h5 class="iq-tw-7">Decentralized AI Services</h5>
                   <p>
-                    Advanced security measures protect the token and its
-                    ecosystem, safeguarding users against potential threats.
+                    Groki1 might offer decentralized AI services through the
+                    blockchain, allowing users to access AI tools and utilities
+                    without relying on centralized control.
                   </p>
                 </div>
               </div>
@@ -502,11 +510,11 @@
                   <img class="img-fluid" src="images/fancy/5.png" alt="" />
                 </div>
                 <div class="fancy-content">
-                  <h5 class="iq-tw-7">Liquidity</h5>
+                  <h5 class="iq-tw-7">Seamless Integration</h5>
                   <p>
-                    Bitcoin Race Token is typically listed on major
-                    cryptocurrency exchanges, ensuring high liquidity and ease
-                    of trading.
+                    With APIs and SDKs, Groki1 could facilitate easy integration
+                    with existing systems, enabling businesses to adopt AI and
+                    blockchain without overhauling their current infrastructure.
                   </p>
                 </div>
               </div>
@@ -517,11 +525,11 @@
                   <img class="img-fluid" src="images/fancy/6.png" alt="" />
                 </div>
                 <div class="fancy-content">
-                  <h5 class="iq-tw-7">Innovation</h5>
+                  <h5 class="iq-tw-7">Customizable AI Models</h5>
                   <p>
-                    The project is committed to continuous development, aiming
-                    to stay at the forefront of the ever-evolving cryptocurrency
-                    landscape.
+                    Offering customizable AI models that users can train and
+                    adapt to their specific needs, whether it’s for predictive
+                    analysis, pattern recognition, or automated decision-making.
                   </p>
                 </div>
               </div>
@@ -536,14 +544,14 @@
         <div class="container">
           <div class="section-header section-header--max50">
             <h2 class="mb-15 mt-minus-5" style="margin-bottom: 50px">
-              <span>Tokenomics</span> Of Bitcoin Race
+              <span>Tokenomics</span> Of Groki1
             </h2>
           </div>
           <div class="row">
             <div class="col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
               <h3 class="token_info">Token Info :</h3>
               <div class="chart-content-inner">
-                <h6>Token Name - Bitcoin Race</h6>
+                <h6>Token Name - Groki1</h6>
 
                 <br />
 
@@ -578,7 +586,7 @@
             </div>
             <div class="col-md-6 wow fadeInRight" data-wow-delay="0.7s">
               <div class="img_box">
-                <img src="/images/all-img/tokn.jpg" alt="" class="tk_img" />
+                <img src="/images/all-img/ban4.png" alt="" class="tk_img" />
               </div>
             </div>
           </div>
@@ -592,7 +600,7 @@
             <div class="col-sm-12">
               <div class="heading-title">
                 <small class="iq-font-green">PROCESS</small>
-                <h2 class="title iq-tw-6">Roadmap of Bitcoin Race</h2>
+                <h2 class="title iq-tw-6">Roadmap of Groki1</h2>
               </div>
             </div>
           </div>
@@ -698,7 +706,7 @@
       </section>
       <!-- Token Sale Timeline -->
       <!-- Team -->
-      <section id="team" class="iq-team overview-block-pb">
+      <section id="team" class="iq-team overview-block-pb team_member">
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
@@ -976,37 +984,37 @@
               <div class="iq-accordion">
                 <div class="iq-ad-block ad-active">
                   <a href="javascript:void(0)" class="ad-title iq-tw-6"
-                    >What is Bitcoin Race?</a
+                    >What is Groki1?</a
                   >
                   <div class="ad-details">
-                    Bitcoin Race Token is a utility token that offers exclusive
+                    Groki1 Token is a utility token that offers exclusive
                     benefits within the cryptocurrency ecosystem, including
                     access to various services and opportunities.
                   </div>
                 </div>
                 <div class="iq-ad-block">
                   <a href="javascript:void(0)" class="ad-title iq-tw-6"
-                    >How can I acquire Bitcoin Race Tokens?</a
+                    >How can I acquire Groki1 Tokens?</a
                   >
                   <div class="ad-details">
-                    You can obtain Bitcoin Race Tokens by purchasing them on
-                    supported cryptocurrency exchanges or by participating in
-                    token sales and promotions.
+                    You can obtain Groki1 Tokens by purchasing them on supported
+                    cryptocurrency exchanges or by participating in token sales
+                    and promotions.
                   </div>
                 </div>
                 <div class="iq-ad-block">
                   <a href="javascript:void(0)" class="ad-title iq-tw-6"
-                    >What can I do with Bitcoin Race Tokens?</a
+                    >What can I do with Groki1 Tokens?</a
                   >
                   <div class="ad-details">
-                    Bitcoin Race Tokens grant you access to exclusive services,
-                    such as reduced trading fees, early access to projects, and
-                    other opportunities within the crypto space.
+                    Groki1 Tokens grant you access to exclusive services, such
+                    as reduced trading fees, early access to projects, and other
+                    opportunities within the crypto space.
                   </div>
                 </div>
                 <div class="iq-ad-block">
                   <a href="javascript:void(0)" class="ad-title iq-tw-6"
-                    >Is Bitcoin Race Token secure?</a
+                    >Is Groki1 Token secure?</a
                   >
                   <div class="ad-details">
                     Yes, the token employs advanced security measures to protect
@@ -1029,7 +1037,7 @@
             <form id="contact" method="post">
               <div class="heading-title left">
                 <small class="iq-font-green">Contact With Us</small>
-                <h2 class="title iq-tw-6">Contact Bitcoin Race</h2>
+                <h2 class="title iq-tw-6">Contact Groki1</h2>
               </div>
 
               <div class="contact-form">
@@ -1176,9 +1184,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-12">
-              <div class="iq-copyright text-white">
-                © Copyright 2023 Bitcoin Race
-              </div>
+              <div class="iq-copyright text-white">© Copyright 2023 Groki1</div>
             </div>
           </div>
         </div>
