--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                       data-bs-toggle="modal"
                       data-bs-target=".iq-login"
                       data-whatever="@mdo"
-                      href="whitepaperlink"
+                      href="https://whitepaper.groki1.vip/"
+                      target="_blank"
                       >Whitepaper</a
                     >
                   </li>
@@ -165,7 +166,8 @@
                 <!-- <a href="chartlink" class="button-play video-popup"> Chart </a> -->
 
                 <a
-                  href="whitepaperlink"
+                  href="https://whitepaper.groki1.vip/"
+                  target="_blank"
                   class="button bt-white iq-mt-5 iq-ml-10"
                   >White Paper</a
                 >
