--- a/index.html
+++ b/index.html
@@ -613,58 +613,84 @@
                   <div class="timeline__items">
                     <div class="timeline__item">
                       <div class="timeline__content">
-                        <h2>2018</h2>
+                        <h2>Foundation and Token Launch</h2>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit. Integer dignissim neque condimentum lacus
-                          dapibus. Lorem ipsum dolor sit amet, consectetur
-                          adipiscing elit. Integer dignissim neque condimentum
-                          lacus dapibus.
+                          Development of the Groki1 AI platform.
+                          <br />
+                          Initial token design and development, including smart
+                          contract creation.
+                          <br />
+                          Presale of Groki1 tokens, targeting early adopters and
+                          strategic partners.
+                          <br />
+                          Official launch of the Groki1 token, listing on major
+                          exchanges.
                         </p>
                       </div>
                     </div>
                     <div class="timeline__item">
                       <div class="timeline__content">
-                        <h2>2015</h2>
+                        <h2>Platform Development and Expansion</h2>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit. Integer dignissim neque condimentum lacus
-                          dapibus.
+                          Implementation of AI-driven solutions and integration
+                          with Groki1 token.
+                          <br />
+                          Expansion of the AI marketplace, enabling transactions
+                          with Groki1 tokens.
+                          <br />
+                          Introduction of community governance features,
+                          allowing token holders to vote on key decisions.
+                          <br />
                         </p>
                       </div>
                     </div>
                     <div class="timeline__item">
                       <div class="timeline__content">
-                        <h2>2014</h2>
+                        <h2>Community Growth and Ecosystem Building</h2>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit. Integer dignissim neque condimentum lacus
-                          dapibus.
+                          Initiatives to incentivize community engagement and
+                          content creation.
+                          <br />
+                          Partnerships with AI developers and start-ups for
+                          ecosystem expansion.
+                          <br />
+                          Implementation of staking mechanisms and financial
+                          incentives for token holders.
+                          <br />
                         </p>
                       </div>
                     </div>
                     <div class="timeline__item">
                       <div class="timeline__content">
-                        <h2>2012</h2>
+                        <h2>Innovation and Global Reach</h2>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit. Integer dignissim neque condimentum lacus
-                          dapibus.
+                          Launch of global marketing campaigns to increase
+                          platform adoption.
+                          <br />
+                          Enhancement of AI capabilities based on community
+                          feedback and technological advancements.
+                          <br />
+                          Expansion of the platform's global footprint,
+                          targeting key markets outside the initial launch
+                          regions.
+                          <br />
                         </p>
                       </div>
                     </div>
                     <div class="timeline__item">
                       <div class="timeline__content">
-                        <h2>2010</h2>
+                        <h2>Sustainability and Long-Term Vision</h2>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit. Integer dignissim neque condimentum lacus
-                          dapibus. Lorem ipsum dolor sit amet, consectetur
-                          adipiscing elit.
+                          Focus on sustainable growth, continuous innovation,
+                          and adaptation to new AI trends and market needs.
+                          <br />
+                          Regular updates and improvements to the platform,
+                          guided by community feedback and technological
+                          advancements.
                         </p>
                       </div>
                     </div>
-                    <div class="timeline__item">
+                    <!-- <div class="timeline__item">
                       <div class="timeline__content">
                         <h2>2007</h2>
                         <p>
@@ -698,7 +724,7 @@
                           dapibus.
                         </p>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
