removed team section

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
       </section>
       <!-- Token Sale Timeline -->
       <!-- Team -->
-      <section id="team" class="iq-team overview-block-pb team_member">
+      <!-- <section id="team" class="iq-team overview-block-pb team_member">
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
@@ -855,7 +855,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- Team END -->
       <!-- PARTNERS -->
       <!-- <section class="iq-partners overview-block-pb">
