--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                       data-bs-toggle="modal"
                       data-bs-target=".iq-login"
                       data-whatever="@mdo"
-                      href="chartlink"
+                      href="https://www.dextools.io/app/en/bnb/pair-explorer/0x5f5f162c3d7f32e39947950c5b117e6868de41d2"
                       >Chart</a
                     >
                   </li>
@@ -133,7 +133,7 @@
                     data-bs-toggle="modal"
                     data-bs-target=".iq-login"
                     data-whatever="@mdo"
-                    href="chartlink"
+                    href="https://www.dextools.io/app/en/bnb/pair-explorer/0x5f5f162c3d7f32e39947950c5b117e6868de41d2"
                     >Chart</a
                   >
                 </li>
@@ -163,7 +163,7 @@
                   of artificial intelligence converges with the robust security
                   of blockchain technology!"
                 </p>
-                <!-- <a href="chartlink" class="button-play video-popup"> Chart </a> -->
+                <!-- <a href="https://www.dextools.io/app/en/bnb/pair-explorer/0x5f5f162c3d7f32e39947950c5b117e6868de41d2" class="button-play video-popup"> Chart </a> -->
 
                 <a
                   href="https://whitepaper.groki1.vip/"
@@ -577,7 +577,7 @@
 
                 <div class="copy-container">
                   <h6 id="contract" style="word-break: break-all">
-                    0x000000000000000000000000000000000
+                    0xC278f02ADCB02599F3E544DF7ED08F961B16FDec
                   </h6>
 
                   <br />
