--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       <!-- Clients -->
       <!-- What is Ico -->
       <section id="ico" class="overview-block-pt about_bg">
-        <div class="container">
+        <div id="about" class="container">
           <div class="row flex-row-reverse">
             <div
               class="col-lg-6 align-self-center wow fadeInLeft"
@@ -444,7 +444,7 @@
       <!-- Tranding Platform END -->
       <!-- Product Description -->
       <section id="product" class="iq-product-description overview-block-pt">
-        <div class="container">
+        <div id="features" class="container">
           <div class="row">
             <div class="col-sm-12">
               <div class="heading-title">
@@ -691,7 +691,7 @@
       <!-- ===============>> tokenomics section end here <<================= -->
       <!-- Token Sale Timeline -->
       <section id="road" class="iq-timeline iq-bg-over overview-block-ptb">
-        <div class="container">
+        <div id="roadmap" class="container">
           <div class="row">
             <div class="col-sm-12">
               <div class="heading-title">
