--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto w-100 justify-content-end">
                   <li class="nav-item">
-                    <a class="nav-link active" href="#home">Home</a>
+                    <a class="nav-link active" href="/">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#about">About</a>
@@ -382,8 +382,8 @@
       </div>
       <!-- Clients -->
       <!-- What is Ico -->
-      <section id="ico" class="overview-block-pt about_bg">
-        <div id="about" class="container">
+      <section id="about" class="overview-block-pt about_bg">
+        <div class="container">
           <div class="row flex-row-reverse">
             <div
               class="col-lg-6 align-self-center wow fadeInLeft"
