--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,7 @@
             <div class="col-sm-12">
               <div class="text-center">
                 <div class="social_icon" style="margin-bottom:30px">
-                  <a href="https://t.me/groki1" target="_blank" rel="noopener noreferrer">
+                  <a href="https://t.me/groki1_t" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-telegram"></i>
                   </a>
                   
